objects/X1Y_Satisfaction_Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>Accept_Call__c</fullName>
        <label>Accept Call?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ages__c</fullName>
        <label>Ages</label>
        <picklist>
            <picklistValues>
                <fullName>24 and less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 - 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 - 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65 and over</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_True_up__c</fullName>
        <label>Annual True-up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Clarity__c</fullName>
        <label>Bill Clarity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Coverage__c</fullName>
        <label>Bill Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 25-49%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 50-74%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 75-100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Savings_Cost__c</fullName>
        <label>Bill Savings Cost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_Savings_Duration__c</fullName>
        <label>Bill Savings Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_savings1__c</fullName>
        <label>Bill savings1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Timely__c</fullName>
        <label>Billing Timely</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bills__c</fullName>
        <label>Bills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field helps to identified the Case survey type.</description>
        <label>Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>1Y Satisfaction Survey Results</relationshipLabel>
        <relationshipName>X1Y_Satisfaction_Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>1Y Satisfaction Survey Results</relationshipLabel>
        <relationshipName>X1Y_Satisfaction_Survey_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Survey_Opt_In__c</fullName>
        <formula>IF( Opportunity__r.Customer_Satisfaction_survey_opt_in__c == True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Sat Survey Opt In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service__c</fullName>
        <label>Customer Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Follow_Up__c</fullName>
        <description>Dealer Follow Up</description>
        <label>Dealer Follow Up</label>
        <picklist>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed – full-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed – part-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time parent, homemaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed.  Not currently working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Energy_Produced__c</fullName>
        <label>Energy Produced</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friends_Refer__c</fullName>
        <label>Friends Refer</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 and more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Future_Home__c</fullName>
        <label>Future Home?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Future_Years_in_Home__c</fullName>
        <label>Future Years in Home</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-7 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 15 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Good_Decision__c</fullName>
        <label>Good Decision?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Visit__c</fullName>
        <label>Home Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_can_we_improve_EN__c</fullName>
        <description>English translation.</description>
        <label>How can we improve? -EN </label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_can_we_improve__c</fullName>
        <label>How can we improve?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation_finishes__c</fullName>
        <label>Installation finishes</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <formula>Opportunity__r.Installer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Placed_In_Service__c</fullName>
        <formula>IF( Opportunity__r.Lease_Placed_in_Service__c == True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Placed In Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field helps to identify the lease record.</description>
        <label>Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_Production_Notification__c</fullName>
        <label>Low Production Notification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_appearance__c</fullName>
        <label>Module appearance</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitor_Frequency__c</fullName>
        <label>Monitor Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>I don&apos;t know how to check it.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rarely or never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About once a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few times per year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few times each week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitor_Method__c</fullName>
        <label>Monitor Method</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Motivation_Other__c</fullName>
        <label>Monitoring Motivation Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Motivation__c</fullName>
        <label>Monitoring Motivation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <label>Monitoring</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Bill__c</fullName>
        <label>Monthly Bill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know or Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neg_Referrals__c</fullName>
        <label>Neg Referrals</label>
        <picklist>
            <picklistValues>
                <fullName>0 (I have not referred anyone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupation_Other__c</fullName>
        <label>Occupation Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Employed for wages (full or part time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Online_Review__c</fullName>
        <label>Online Review?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Installation_Date__c</fullName>
        <formula>Opportunity__r.Installation_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lease__c</fullName>
        <formula>IF(Opportunity__r.Lease__c == True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Lease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>Case#00465267, We have created formula field as salesforce has limitation to pull cross object field values in 1YSatisfaction Survey Result</description>
        <formula>Opportunity__r.Owner_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>Case#00465267, We have created formula field as salesforce has limitation to pull cross object field values in 1YSatisfaction Survey Result</description>
        <formula>Opportunity__r.Owner.FirstName+&quot;&quot;+Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>1Y Satisfaction Survey Results</relationshipLabel>
        <relationshipName>X1Y_Satisfaction_Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Theater__c</fullName>
        <formula>TEXT(Partner_Account__r.Theater__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>1Y Satisfaction Survey Results (Partner Account)</relationshipLabel>
        <relationshipName>X1Y_Satisfaction_Survey_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Options__c</fullName>
        <label>Payment Options</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <label>Performance Guarantee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Production_Report__c</fullName>
        <label>Production  Report?</label>
        <picklist>
            <picklistValues>
                <fullName>I received the report and have reviewed it.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I received the report, but have not reviewed it.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have not received the report.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not sure if I have the report or not.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectCoordinatorEmail__c</fullName>
        <description>Please refer Case# 00461746 created as per Kristel Wickham request.</description>
        <label>Project Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator_Email__c</fullName>
        <description>Case 00437348  Requested by Kristel Wickham.</description>
        <formula>Opportunity__r.Project_Coordinator__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Coordinator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator_Name__c</fullName>
        <description>Case 00437348  Requested by Kristel Wickham.</description>
        <formula>Opportunity__r.Project_Coordinator__r.FirstName + &quot; &quot; + Opportunity__r.Project_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Coordinator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Email__c</fullName>
        <description>Case#00465267, We have created formula field as salesforce has limitation to pull cross object field values in 1YSatisfaction Survey Result</description>
        <formula>Partner_Account__r.RSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Name__c</fullName>
        <description>Case#00465267, We have created formula field as salesforce has limitation to pull cross object field values in 1YSatisfaction Survey Result.</description>
        <formula>Partner_Account__r.RSM__r.FirstName + &quot; &quot; + Partner_Account__r.RSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Purchase_Other__c</fullName>
        <label>Reasons for Purchase Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_to_Dealer_Other__c</fullName>
        <label>Referred to Dealer? Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_to_SPWR_Other__c</fullName>
        <label>Referred to SPWR? Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repurchase_Probability__c</fullName>
        <label>Repurchase Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Helper__c</fullName>
        <label>Resolution Helper</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_Time__c</fullName>
        <label>Resolved Time</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 1 day and 1 week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 4 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 3 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <label>Resolved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPWR_Advocacy_comments_EN__c</fullName>
        <description>English translation.</description>
        <label>SPWR Advocacy-comments -EN </label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPWR_Advocacy_comments__c</fullName>
        <label>SPWR Advocacy-comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPWR_advocacy__c</fullName>
        <label>SPWR advocacy</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Savings_Expectations__c</fullName>
        <label>Savings Expectations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Savings_expectation__c</fullName>
        <label>Savings expectation</label>
        <picklist>
            <picklistValues>
                <fullName>Greatly Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fails to meet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Media_Post__c</fullName>
        <label>Social Media Post</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Survey__c</fullName>
        <label>Status Survey</label>
        <picklist>
            <picklistValues>
                <fullName>1st Invitation Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Invitation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Invitation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Invitation sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opted Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suitable_Size__c</fullName>
        <label>Suitable Size?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_issues__c</fullName>
        <label>Support issues</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I did not face any issue with my Photovoltaic system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Reference_Date__c</fullName>
        <label>Survey Reference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Response_Date__c</fullName>
        <label>Survey Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_link__c</fullName>
        <label>Survey link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>System_Documentation__c</fullName>
        <label>System Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Engagement_Other__c</fullName>
        <label>System Engagement Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Engagement__c</fullName>
        <label>System Engagement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>